# DataStream

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  README.md  read.cc  write.cc
include/: Algo.h  AttributeHandler.h  Compressor.h  DataStream.h  ErrorHandler.h  File.h  Kernel.h  Keyword.h  MetaData.h
python/: README.md  datastream.py  read.py
src/: Compressor.cc  File.cc  Kernel.cc  MetaData.cc
